UI updated, Images added.

--- a/src/UI/FXMLDocument.fxml
+++ b/src/UI/FXMLDocument.fxml
@@ -60,7 +60,7 @@
                            <graphic>
                               <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@images/export.png" />
+                                    <Image url="@images/report.png" />
                                  </image>
                               </ImageView>
                            </graphic></MenuItem>
