--- a/src/UI/FXMLDocument.fxml
+++ b/src/UI/FXMLDocument.fxml
@@ -276,7 +276,7 @@
                                                                   <children>
                                                                       <VBox alignment="TOP_CENTER" layoutX="10.0" layoutY="71.0" prefHeight="228.0" prefWidth="226.0" spacing="10.0">
                                                                           <children>
-                                                                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="182.0" text="Detection Detection">
+                                                                              <Label alignment="CENTER" prefHeight="20.0" prefWidth="182.0" text="Detection Method">
                                                                                   <VBox.margin>
                                                                                       <Insets />
                                                                                   </VBox.margin>
@@ -406,7 +406,7 @@
                                                             </HBox>
                                                             <HBox alignment="CENTER" prefHeight="29.0" prefWidth="227.0" spacing="20.0">
                                                                <children>
-                                                                  <Button fx:id="launchCalculation" mnemonicParsing="false" onAction="#startCalculateAttributes" text="Calculate">
+                                                                  <Button fx:id="launchCalculation" disable="true" mnemonicParsing="false" onAction="#startCalculateAttributes" text="Calculate">
                                                                      <graphic>
                                                                         <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                                                            <image>
@@ -682,28 +682,9 @@
                                   <items>
                                       <AnchorPane maxHeight="50.0" minHeight="40.0" minWidth="0.0" prefHeight="40.0" prefWidth="538.0">
                                           <children>
-                                    <HBox layoutX="391.0" layoutY="13.0" spacing="10.0" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="13.0">
+                                    <HBox alignment="CENTER_LEFT" layoutX="315.0" layoutY="11.0" prefHeight="28.0" prefWidth="217.0" spacing="10.0">
                                        <children>
-                                                    <Button cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" prefHeight="17.0" prefWidth="78.0" text="Cancel">
-                                             <graphic>
-                                                <ImageView fitHeight="21.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@images/cancel.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </graphic></Button>
-                                                    <Button alignment="CENTER" mnemonicParsing="false" onAction="#startAll" prefHeight="21.0" prefWidth="83.0" style="color: ;" text="Launch" textAlignment="CENTER">
-                                             <graphic>
-                                                <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@images/start.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </graphic></Button>
-                                       </children>
-                                    </HBox>
-                                    <HBox alignment="CENTER" layoutX="7.0" layoutY="11.0" prefHeight="28.0" prefWidth="315.0" spacing="10.0">
-                                       <children>
+                                          <RadioButton fx:id="radioLogFile" mnemonicParsing="false" text="Generate Log file" />
                                           <Button graphicTextGap="1.0" minWidth="20.0" mnemonicParsing="false" onAction="#visualizeFile" prefHeight="30.0" prefWidth="85.0" text="Visualize">
                                              <HBox.margin>
                                                 <Insets />
@@ -716,15 +697,6 @@
                                                 </ImageView>
                                              </graphic>
                                           </Button>
-                                          <Button graphicTextGap="1.0" mnemonicParsing="false" onAction="#selectAttributes" prefHeight="28.0" prefWidth="88.0" text="Attributes">
-                                             <graphic>
-                                                <ImageView fitHeight="20.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@images/attributes.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </graphic></Button>
-                                          <RadioButton fx:id="radioLogFile" mnemonicParsing="false" text="Generate Log file" />
                                        </children>
                                     </HBox>
                                           </children>
@@ -741,7 +713,7 @@
                                                          <content>
                                                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                                                <children>
-                                                                  <StackPane fx:id="paneVisualize" layoutX="137.0" layoutY="95.0" prefHeight="150.0" prefWidth="200.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+                                                                  <StackPane fx:id="paneVisualize" layoutY="10.0" prefHeight="150.0" prefWidth="200.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
                                                                </children>
                                                             </AnchorPane>
                                                          </content>
@@ -800,7 +772,7 @@
                                           </AnchorPane>
                                         <AnchorPane maxHeight="80.0" minHeight="80.0" minWidth="0.0" prefHeight="80.0" prefWidth="537.0">
                                              <children>
-                                                          <TextArea fx:id="logTextArea" editable="false" layoutY="-64.0" maxHeight="160.0" minHeight="80.0" prefHeight="80.0" prefWidth="530.0" style="-fx-background-color: grey;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                          <TextArea fx:id="logTextArea" editable="false" maxHeight="160.0" minHeight="80.0" prefHeight="80.0" prefWidth="530.0" style="-fx-background-color: grey;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                              </children>
                                           </AnchorPane>
                                       </items>
