--- a/src/UI/FXMLDocument.fxml
+++ b/src/UI/FXMLDocument.fxml
@@ -59,7 +59,7 @@
                                         </ImageView>
                                     </graphic>
                                 </MenuItem>
-                                <MenuItem mnemonicParsing="false" onAction="#handleExportEReport" text="Export Evaluation Report">
+                                <MenuItem fx:id="menuItemEReport" disable="true" mnemonicParsing="false" onAction="#handleExportEReport" text="Export Evaluation Report">
                                     <graphic>
                                         <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
@@ -68,7 +68,7 @@
                                         </ImageView>
                                     </graphic>
                                 </MenuItem>
-                                <MenuItem mnemonicParsing="false" text="close">
+                                <MenuItem mnemonicParsing="false" onAction="#handleClose" text="close">
                                     <graphic>
                                         <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
@@ -81,20 +81,20 @@
                         </Menu>
                         <Menu mnemonicParsing="false" text="View">
                             <items>
-                                <MenuItem mnemonicParsing="false" text="Delete">
+                                <MenuItem mnemonicParsing="false" onAction="#handleReset" text="Reset">
                                     <graphic>
                                         <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
-                                                <Image url="@images/delete.png" />
+                                                <Image url="@images/reset.png" />
                                             </image>
                                         </ImageView>
                                     </graphic>
                                 </MenuItem>
                             </items>
                         </Menu>
-                        <Menu mnemonicParsing="false" text="Help">
+                        <Menu mnemonicParsing="false" onAction="#handleAbout" text="Help">
                             <items>
-                                <MenuItem mnemonicParsing="false" text="About EPrediction">
+                                <MenuItem mnemonicParsing="false" onAction="#handleAbout" text="About EPredictor">
                                     <graphic>
                                         <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
@@ -672,7 +672,7 @@
                                                                                                         </Button>
                                                                                                     </children>
                                                                                                 </HBox>
-                                                                                                <Button mnemonicParsing="false" onAction="#handleExportEReport" prefHeight="26.0" prefWidth="114.0" text="Generate Report">
+                                                                                                <Button fx:id="buttonEReport" disable="true" mnemonicParsing="false" onAction="#handleExportEReport" prefHeight="26.0" prefWidth="114.0" text="Generate Report">
                                                                                                     <font>
                                                                                                         <Font size="10.0" />
                                                                                                     </font>
@@ -811,7 +811,10 @@
                                                         </AnchorPane>
                                                         <AnchorPane maxHeight="80.0" minHeight="80.0" minWidth="0.0" prefHeight="80.0" prefWidth="537.0">
                                                             <children>
-                                                                <TextArea fx:id="logTextArea" editable="false" maxHeight="160.0" minHeight="80.0" prefHeight="80.0" prefWidth="530.0" style="-fx-background-color: grey;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                                <TextArea fx:id="logTextArea" editable="false" maxHeight="160.0" minHeight="80.0" prefHeight="80.0" prefWidth="530.0" style="-fx-background-color: grey;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                   <font>
+                                                      <Font name="System Bold" size="15.0" />
+                                                   </font></TextArea>
                                                             </children>
                                                         </AnchorPane>
                                                     </items>
