--- a/src/UI/dialog.fxml
+++ b/src/UI/dialog.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane id="root" prefHeight="242.0" prefWidth="508.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.DialogTestController">
   <center>
@@ -50,6 +51,13 @@
     </VBox>
   </center>
    <top>
-      <VBox prefHeight="58.0" prefWidth="508.0" BorderPane.alignment="CENTER" />
+      <VBox alignment="CENTER" prefHeight="58.0" prefWidth="508.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Dataset info:">
+               <font>
+                  <Font name="System Bold" size="25.0" />
+               </font>
+            </Label>
+         </children></VBox>
    </top>
 </BorderPane>
