--- a/src/UI/FXMLDocument.fxml
+++ b/src/UI/FXMLDocument.fxml
@@ -608,7 +608,7 @@
                                                                                                 </HBox>
                                                                         <HBox alignment="CENTER_LEFT" prefHeight="31.0" prefWidth="210.0" spacing="5.0">
                                                                            <children>
-                                                                              <Label alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="144.0" text="Folds number:">
+                                                                              <Label alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="144.0" text="Cross-Validation folds:">
                                                                                  <font>
                                                                                     <Font size="11.0" />
                                                                                  </font>
